--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "author": "Anthony Cleaver",
   "license": "ISC",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@cleavera/fs": "^1.1.0",
+    "@cleavera/utils": "^2.2.0"
+  }
 }
