--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
+    "declaration": true,
     "alwaysStrict": true,
     "sourceMap": true,
     "emitDecoratorMetadata": true,
