--- a/modules/core/package.json
+++ b/modules/core/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^10.12.15",
     "tslint": "^5.11.0",
     "typescript": "^3.2.2"
+  },
+  "dependencies": {
+    "@cleavera/utils": "^2.3.0"
   }
 }
