--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -2,7 +2,7 @@
   "name": "@getig/common",
   "version": "0.1.0",
   "description": "Common module for getig",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project ./tsconfig.json",
@@ -14,5 +14,10 @@
     "@types/node": "^10.12.15",
     "tslint": "^5.11.0",
     "typescript": "^3.2.2"
+  },
+  "dependencies": {
+    "@cleavera/fs": "^1.1.0",
+    "@cleavera/utils": "^2.3.0",
+    "@getig/core": "^0.2.0"
   }
 }
