--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project ./tsconfig.json",
-    "prepublish": "npm run lint && npm run build"
+    "prepack": "git clean -X -f -d --exclude=\"!node_modules\" && npm run lint && npm run build"
   },
   "author": "Anthony Cleaver",
   "license": "ISC",
