--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -11,13 +11,16 @@
   "author": "Anthony Cleaver",
   "license": "ISC",
   "devDependencies": {
+    "@getig/core": "^0.4.0",
     "@types/node": "^10.12.15",
     "tslint": "^5.11.0",
     "typescript": "^3.2.2"
   },
   "dependencies": {
     "@cleavera/fs": "^1.1.0",
-    "@cleavera/utils": "^2.3.0",
-    "@getig/core": "^0.2.0"
+    "@cleavera/utils": "^2.3.0"
+  },
+  "peerDependencies": {
+    "@getig/core": "^0.4.0"
   }
 }
