--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -1,18 +1,20 @@
 {
   "name": "@getig/common",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "description": "Common module for getig",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && copyfiles -u 1 src/**/*.component.html dist",
+    "clean": "git clean -X -f -d --exclude=\"!node_modules\"",
     "lint": "tslint --project ./tsconfig.json",
-    "prepack": "git clean -X -f -d --exclude=\"!node_modules\" && npm run lint && npm run build"
+    "prepack": "npm run clean && npm run lint && npm run build"
   },
   "author": "Anthony Cleaver",
   "license": "ISC",
   "devDependencies": {
     "@getig/core": "^0.4.0",
     "@types/node": "^10.12.15",
+    "copyfiles": "^2.1.0",
     "tslint": "^5.11.0",
     "typescript": "^3.2.2"
   },
