--- a/modules/core/package.json
+++ b/modules/core/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "clean": "git clean -X -f -d --exclude=\"!node_modules\"",
     "lint": "tslint --project ./tsconfig.json",
-    "prepack": "git clean -X -f -d --exclude=\"!node_modules\" && npm run lint && npm run build"
+    "prepack": "npm run clean && npm run lint && npm run build"
   },
   "author": "Anthony Cleaver",
   "license": "ISC",
