--- a/modules/docs/package.json
+++ b/modules/docs/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@getig/docs",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Documentation for getig",
   "scripts": {
-    "build": "npm run clean && npm run lint && npm run compile",
-    "dev": "chokidar src/**/* content/**/* -c \"npm run compile\"",
-    "compile": "ts-node src/core/index",
+    "build": "npm run clean && npm run update-dependencies && npm run lint && npm run compile",
+    "dev": "concurrently \"npm run watch-dependencies\" \"npm run watch-source\"",
+    "compile": "ts-node src/core/index --project=\"./tsconfig.json\"",
     "clean": "git clean -X -f -d --exclude=\"!node_modules\"",
+    "update-dependencies": "gosod ../core ../common",
+    "watch-dependencies": "chokidar ../core/src/**/* ../common/src/**/* -c \"gosod ../core ../common && npm run compile\" -d=2000 --initial",
+    "watch-source": "chokidar src/**/* content/**/* -c \"npm run compile\" -d=1000 --initial",
     "lint": "tslint --project ./tsconfig.json"
   },
   "author": "Anthony Cleaver",
@@ -14,14 +17,14 @@
   "private": true,
   "devDependencies": {
     "@cleavera/fs": "^1.4.1",
-    "@getig/common": "^0.5.0",
-    "@getig/core": "^0.8.0",
     "@types/glob": "^7.1.1",
     "@types/markdown-it": "0.0.9",
     "@types/node": "^10.12.15",
     "@types/node-sass": "^4.11.0",
     "chokidar-cli": "^2.1.0",
+    "concurrently": "^5.0.2",
     "glob": "^7.1.6",
+    "gosod": "^1.1.0",
     "markdown-it": "^10.0.0",
     "node-sass": "^4.13.0",
     "ts-node": "^8.5.4",
