--- a/modules/docs/tsconfig.json
+++ b/modules/docs/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "./compiled"
+    "outDir": "./compiled",
+    "paths": {
+      "@getig/core": ["../core/src/index"],
+      "@getig/common": ["../common/src/index"]
+    }
   },
   "include": [
     "./src/**/*"
