--- a/modules/core/.eslintrc.json
+++ b/modules/core/.eslintrc.json
@@ -1,5 +1,26 @@
 {
   "extends": [
     "./node_modules/@cleavera/config/.eslintrc.json"
-  ]
+  ],
+  "rules": {
+    "no-dupe-class-members": [
+      "off"
+    ],
+    "@typescript-eslint/no-dupe-class-members": [
+      "error"
+    ],
+    "object-curly-newline": [
+      "error",
+      {
+        "ObjectExpression": {
+          "minProperties": 1
+        },
+        "ObjectPattern": {
+          "multiline": true
+        },
+        "ImportDeclaration": "never",
+        "ExportDeclaration": "never"
+      }
+    ]
+  }
 }
